--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/videos/IMG_1050.MOV
+    - assets/videos/3723.mp4
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
