--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   video_player: ^2.5.1
   visibility_detector: ^0.3.3
   flex_color_scheme: ^6.1.2
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
