--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,12 +79,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: GmarketSans
+      fonts:
+        - asset: fonts/GmarketSansTTFMedium.ttf
+          weight: 500
+        - asset: fonts/GmarketSansTTFLight.ttf
+          weight: 300
+        - asset: fonts/GmarketSansTTFBold.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
