[feature/darkmode] vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,4 +19,13 @@
     // "dart.openDevTools": "flutter",
     "dart.debugExternalPackageLibraries": true,
     "dart.debugSdkLibraries": false,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true
+    },
+    "hide-files.files": [],
 }
