--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.3.0
   gallery_saver: ^2.3.2
+  go_router: ^6.2.0
   image_picker: ^0.8.6+4
   permission_handler: ^10.2.0
   video_player: ^2.5.1
