--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   go_router: ^6.2.0
   image_picker: ^0.8.6+4
   permission_handler: ^10.2.0
+  provider: ^6.0.5
   video_player: ^2.5.1
   visibility_detector: ^0.3.3
 
