--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^0.8.6+4
   permission_handler: ^10.2.0
   provider: ^6.0.5
+  shared_preferences: ^2.0.18
   video_player: ^2.5.1
   visibility_detector: ^0.3.3
 
