--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   camera: ^0.10.3+2
+  cloud_firestore: ^4.4.4
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.2.10
+  firebase_core: ^2.7.1
+  firebase_storage: ^11.0.15
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.3.0
