--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   camera: ^0.10.3+2
   cloud_firestore: ^4.4.4
+  cloud_functions: ^4.0.12
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.10
   firebase_core: ^2.7.1
